--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.tif filter=lfs diff=lfs merge=lfs -text
 *.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images/week0.czi filter=lfs diff=lfs merge=lfs -text
