--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,34 @@
 *.tif filter=lfs diff=lfs merge=lfs -text
 *.czi filter=lfs diff=lfs merge=lfs -text
 static/czi_images/week0.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week0/week0.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week0/week0.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/FA/week1_FA.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/FA/week1_FA.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/FV/week1_FV.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/FV/week1_FV.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/HA/week1_HA.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/HA/week1_HA.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/HV/week1_HV.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/HV/week1_HV.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/kmc1/week1_kmc1.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/kmc1/week1_kmc1.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/kmc2/week1_kmc2.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/kmc2/week1_kmc2.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/kmc3/week1_kmc3.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week1/kmc3/week1_kmc3.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/FA/week2_FA.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/FA/week2_FA.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/FV/week2_FV.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/FV/week2_FV.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/HA/week2_HA.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/HA/week2_HA.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/HV/week2_HV.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/HV/week2_HV.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/kmc1/week2_kmc1.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/kmc1/week2_kmc1.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/kmc2/week2_kmc2.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/kmc2/week2_kmc2.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/kmc3/week2_kmc3.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week2/kmc3/week2_kmc3.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/FA/week3_FA.czi filter=lfs diff=lfs merge=lfs -text
