--- a/.gitattributes
+++ b/.gitattributes
@@ -33,3 +33,26 @@ static/czi_images_detailed/week2/kmc2/week2_kmc2.tif filter=lfs diff=lfs merge=l
 static/czi_images_detailed/week2/kmc3/week2_kmc3.czi filter=lfs diff=lfs merge=lfs -text
 static/czi_images_detailed/week2/kmc3/week2_kmc3.tif filter=lfs diff=lfs merge=lfs -text
 static/czi_images_detailed/week3/FA/week3_FA.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/FA/week3_FA.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/FV/week3_FV.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/FV/week3_FV.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/HA/week3_HA.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/HA/week3_HA.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/HV/week3_HV.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/HV/week3_HV.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/kmc1/week3_kmc1.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/kmc1/week3_kmc1.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/kmc2/week3_kmc2.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/kmc2/week3_kmc2.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/kmc3/week3_kmc3.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week3/kmc3/week3_kmc3.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week6/FA/week6_FA.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week6/FA/week6_FA.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week6/FV/week6_FV.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week6/FV/week6_FV.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week6/HA/week6_HA.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week6/HA/week6_HA.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week6/kmc1/week6_kmc1.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week6/kmc1/week6_kmc1.tif filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week6/kmc3/week6_kmc3.czi filter=lfs diff=lfs merge=lfs -text
+static/czi_images_detailed/week6/kmc3/week6_kmc3.tif filter=lfs diff=lfs merge=lfs -text
