--- a/.gitattributes
+++ b/.gitattributes
@@ -62,3 +62,12 @@ static/overview/healthy[[:space:]]arteriole/CT[[:space:]]64822[[:space:]]M1[[:sp
 static/overview/healthy[[:space:]]arteriole/overview.czi filter=lfs diff=lfs merge=lfs -text
 static/overview/healthy[[:space:]]venule/CT[[:space:]]64822[[:space:]]M1[[:space:]]SE555[[:space:]]63x[[:space:]]100um[[:space:]]vein.aivia.tif filter=lfs diff=lfs merge=lfs -text
 static/overview/healthy[[:space:]]venule/overview.czi filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+static/vessel/week1/fibrotic_arteriole/week1.czi filter=lfs diff=lfs merge=lfs -text
+static/vessel/week1/fibrotic_venule/week1.czi filter=lfs diff=lfs merge=lfs -text
+static/vessel/week1/healthy_arteriole/week1.czi filter=lfs diff=lfs merge=lfs -text
+static/vessel/week1/healthy_venule/week1.czi filter=lfs diff=lfs merge=lfs -text
+static/vessel/week2/fibrotic_arteriole/week2.czi filter=lfs diff=lfs merge=lfs -text
+static/vessel/week2/fibrotic_venule/week2.czi filter=lfs diff=lfs merge=lfs -text
+static/vessel/week2/healthy_arteriole/week2.czi filter=lfs diff=lfs merge=lfs -text
+static/vessel/week2/healthy_venule/week2.czi filter=lfs diff=lfs merge=lfs -text
